partA/wandb/run-20250419_002924-lr9zj76t/files/output.log
Loading Data ....
 44%|██████████████████████████████████████████████████▎                                                              | 4449/9999 [00:18<00:25, 218.75it/s][34m[1mwandb[0m: [32m[41mERROR[0m Error while calling W&B API: could not find agent p1b3a9wr during agentHeartbeat (<Response [404]>)
Exception in thread Thread-2 (_heartbeat):
Traceback (most recent call last):
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/sdk/internal/internal_api.py", line 3194, in agent_heartbeat
    response = self.gql(
               ^^^^^^^^^
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/sdk/internal/internal_api.py", line 374, in gql
    ret = self._retry_gql(
          ^^^^^^^^^^^^^^^^
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/sdk/lib/retry.py", line 134, in __call__
    result = self._call_fn(*args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/sdk/internal/internal_api.py", line 402, in execute
    return self.client.execute(*args, **kwargs)  # type: ignore
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 52, in execute
    result = self._get_result(document, *args, **kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/vendor/gql-0.2.0/wandb_gql/client.py", line 60, in _get_result
    return self.transport.execute(document, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/sdk/lib/gql_request.py", line 59, in execute
    request.raise_for_status()
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/requests/models.py", line 1024, in raise_for_status
    raise HTTPError(http_error_msg, response=self)
requests.exceptions.HTTPError: 404 Client Error: Not Found for url: https://api.wandb.ai/graphql

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/home/user/miniconda3/lib/python3.12/threading.py", line 1075, in _bootstrap_inner
    self.run()
  File "/home/user/miniconda3/lib/python3.12/threading.py", line 1012, in run
    self._target(*self._args, **self._kwargs)
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/agents/pyagent.py", line 165, in _heartbeat
    commands = self._api.agent_heartbeat(self._agent_id, {}, run_status)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/apis/internal.py", line 161, in agent_heartbeat
    return self.api.agent_heartbeat(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/user/Documents/DL/DL_ENV/lib/python3.12/site-packages/wandb/sdk/internal/internal_api.py", line 3205, in agent_heartbeat
    message = ast.literal_eval(e.args[0])["message"]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/user/miniconda3/lib/python3.12/ast.py", line 66, in literal_eval
    node_or_string = parse(node_or_string.lstrip(" \t"), mode='eval')
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/user/miniconda3/lib/python3.12/ast.py", line 52, in parse
    return compile(source, filename, mode, flags,
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<unknown>", line 1
    404 Client Error: Not Found for url: https://api.wandb.ai/graphql
        ^^^^^^
SyntaxError: invalid syntax
 54%|█████████████████████████████████████████████████████████████▍                                                   | 5438/9999 [00:23<00:18, 247.38it/s][34m[1mwandb[0m: Ctrl + C detected. Stopping sweep.
